# 3DViewer

./: Makefile  README.md
s21_viewer_func/: affine.c  parcer.c  s21_viewer.h
tests/: s21_test_viewer.c  s21_test_viewer.h
viewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h
viewer/QtGifImage/gifimage/: qgifimage.cpp  qgifimage.h  qgifimage_p.h
